Fix Tampilan & menambahkan page detail per lowongan

--- a/public/template/assets/css/animations/style.css
+++ b/public/template/assets/css/animations/style.css
@@ -3,6 +3,20 @@ input.topbar-search-input#topbar-search-input:focus {
     color: #F9F9F9;
 }
 
+/* All Form Input In Main Contet Start */
+input.form-input:focus {
+    border: 1px solid #F9F9F9;
+    color: #F9F9F9;
+}
+/* All Form Input In Main Contet End */
+
+/* Table Vacancy Actions Start */
+.table-vacancy-actions {
+    display: flex;
+    flex-direction: column;
+}
+/* Table Vacancy Actions End */
+
 .footer-social-media a {
     color: grey;
     transition: .5s;
